--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     // camera
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    // BottomNavigationView
+    implementation 'com.google.android.material:material:1.4.0'
+
 }
