추가: recycler view, room database 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    // room database
+    id 'kotlin-kapt'
 }
 
 android {
@@ -55,5 +57,10 @@ dependencies {
 
     // BottomNavigationView
     implementation 'com.google.android.material:material:1.4.0'
+
+    // room database
+    implementation("androidx.room:room-runtime:2.3.0")
+    annotationProcessor("androidx.room:room-compiler:2.3.0")
+    kapt("androidx.room:room-compiler:2.3.0")
 
 }
