--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.babygage_ocr"
-        minSdk 18
+        minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -63,5 +63,22 @@ dependencies {
     implementation("androidx.room:room-runtime:2.3.0")
     annotationProcessor("androidx.room:room-compiler:2.3.0")
     kapt("androidx.room:room-compiler:2.3.0")
+
+
+    // material design library
+    implementation 'com.google.android.material:material:1.2.1'
+
+    // camerax
+    // CameraX core library using the camera2 implementation
+    def camerax_version = "1.0.0-rc03"
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    // If you want to additionally use the CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha22"
+    // If you want to additionally use the CameraX Extensions library
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha22"
 
 }
