--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-feature android:name="android.hardware.camera.any" /><!-- camerax -->
+
 
     <application
         android:allowBackup="true"
@@ -29,6 +31,13 @@
         android:theme="@style/Theme.BABYGAGE_OCR"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".CameraActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="false">
@@ -45,28 +54,27 @@
         </activity>
         <activity
             android:name=".TestActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".SetImageActivity"
-            android:parentActivityName=".TestActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".TestActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".ReceiptocrActivity"
             android:exported="false" />
         <activity
             android:name=".ImportimageActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="false" /> <!-- <activity -->
+            android:exported="false"
+            android:parentActivityName=".MainActivity" /> <!-- <activity -->
         <!-- android:name=".TakepictureActivity" -->
         <!-- android:exported="false" /> -->
         <activity
