--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,15 +40,19 @@ android {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation files('libs/poi-5.2.3.jar')
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    kapt "org.xerial:sqlite-jdbc:3.34.0"
+
 
     // flask
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
