--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-feature android:name="android.hardware.camera.any" /><!-- camerax -->
 
-
     <application
-        android:allowBackup="true"
+
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/logo_round"
@@ -29,7 +29,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BABYGAGE_OCR"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
+
         <activity
             android:name=".CameraActivity"
             android:exported="false">
