--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 }
 
 dependencies {
+    kapt "org.xerial:sqlite-jdbc:3.34.0"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.core:core-ktx:1.7.0'
