--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31"
         >
+
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
 
@@ -121,7 +122,8 @@
             android:exported="true" />
         <activity
             android:name=".FinancialmainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".FinancialmainActivity" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
