--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.babygage_ocr">
+    <!-- excel -->
+    <queries>
+        <provider android:authorities="com.samsung.android.smp.testreg.provider"/>
+    </queries>
+
     <!-- camera -->
     <uses-permission android:name="android.permission.CAMERA" />
 
